--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thmyeleaf.org">
+<html lang="en" xmlns:th="http://www.thmyeleaf.org" th:replace="~{fragments/layout :: layout (~{::body}, 'vets')}">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
